# labs

./: .gitignore  README.md  pom.xml
ConfigData/: client-apps-v2.properties  client-apps.properties
infrastructure/: pom.xml
infrastructure/docker-compose/: .env  Makefile  amq-infra.yml  cassandra-cluster.yml  cassandra.yml  kong_infra.yml  mariadb_infra.yml  network.yml  postgre-infra.yml  redis-infra.yml  redis-slave.yml
infrastructure/docker-compose/kafka-cluster/: ini_kafka.yml  kafka-cluster-infra.yml  kafka-manager.yml  zookeeper.yml
infrastructure/k8s-orchestration/: Readme.md  sample-deployment.yaml  sample-pod.yaml  service.yaml
playground/: pom.xml
playground/cloud-config/: pom.xml
playground/common-domain/: pom.xml
playground/springboot-actuator/: pom.xml
playground/springboot-amq/: pom.xml
playground/springboot-camunda/: pom.xml
playground/springboot-elasticsearch/: pom.xml
playground/springboot-graphql/: pom.xml
playground/springboot-jpa/: pom.xml
playground/springboot-kafka/: pom.xml
playground/springboot-redis/: Dockerfile  pom.xml
playground/springboot-security-keycloak/: pom.xml
playground/springboot-tesseract/: pom.xml  readme.md
playground/springboot-thymeleaf/: pom.xml
quarkus-playground/: pom.xml
rust-playgroud/: readme.md
rust-playgroud/01-how to install rust/: readme.md
rust-playgroud/02-sample-app/: readme.md
rust-playgroud/03-crud/rust-food-management/: .env  Cargo.toml
rust-playgroud/03-crud/rust-food-management/src/: main.rs  model.rs
simple-case/: pom.xml
simple-case/social-media/: pom.xml
(+79 files in other folders)
